# PDM_PINN

./: .gitignore  README.md  paths.json  requirements.txt
CrackSalvus/: Crack.ipynb  Moseley_CRACK_1.ipynb  Moseley_CRACK_2.ipynb  Moseley_EARTH _Small_TS.ipynb  Moseley_EARTH.ipynb  Moseley_EARTH_1.ipynb  Moseley_EARTH_1_bis.ipynb  Moseley_EARTH_2.ipynb  Moseley_EARTH_3.ipynb  Moseley_HOMOGENEOUS.ipynb  Moseley_HOMOGENEOUS_1.ipynb  Moseley_HOMOGENEOUS_2.ipynb  Moseley_HOMOGENEOUS_3.ipynb  Moseley_HOMOGENEOUS_Small_TS.ipynb  Velocity_Field_Crack_2.npy  crack.py  moseley_config_file_1.json  moseley_config_file_2.json  moseley_config_file_3.json  moseley_config_file_crack_1.json  moseley_config_file_crack_2.json  moseley_config_file_small_TS.json
CrackSalvus/Helpers/: helpers.py  my_crack.py
DNN_Test/Crack/: figures_predictions.ipynb
DNN_Test/Training_Data/: Moseley_Crack_1_EVENT0000.csv  Moseley_Crack_1_EVENT0002.csv  Moseley_Crack_1_EVENT0003.csv  Moseley_Crack_1_EVENT0004.csv  Moseley_Crack_1_EVENT0006.csv  Moseley_Crack_1_Test.csv  Moseley_Crack_2_EVENT0005.csv  Moseley_Crack_2_EVENT0009.csv  Moseley_EARTH_1.csv  Moseley_EARTH_1_Bis.csv  (+16 more)
FEM/Salvus/Integration Tests/Semi-Analytic Test - Acoustic/gar6more2d/mod/: CMakeLists.txt  m_const.F90  m_num.F90  m_phys.F90  m_result.F90  m_sismo.F90  m_source.F90
FEM/Salvus/Integration Tests/Semi-Analytic Test - Elastic/gar6more2d/: CMakeLists.txt  License  README  README.dox
FEM/Salvus/Integration Tests/Semi-Analytic Test - Elastic/gar6more2d/cmake/: gar6more_flags.cmake
FEM/Salvus/Integration Tests/Semi-Analytic Test - Elastic/gar6more2d/includefic/: m_inter.h90
MLP_Burgers_1D/: Data_PINN_Comparison.ipynb  model_burger_pinn.py  train_burger_data.py
ParaView/: poisson_2.pvsm
SciANN/: Pytorch_Acoustic_2D_ADAM.ipynb  Pytorch_Acoustic_2D_LBGFS.ipynb  SciANN_Acoustic_2D.ipynb  SciANN_Acoustic_2D_forward.ipynb  SciANN_Acoustic_2D_forward_ic.ipynb  SciANN_Bruger_1.npy  SciANN_Bruger_2.npy  SciANN_Burger1D.ipynb  SciANN_Burger2D.ipynb  SciANN_NS.ipynb  SciANN_NS_short.ipynb  convert_h5_to_txt.ipynb  requirements.txt  trained-navier-stokes.hdf5
(+1422 files in other folders)
